--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -54,7 +54,7 @@
                 <ol class="list-group list-group-numbered">
                   <li class="list-group-item d-flex justify-content-between align-items-start">
                     <div class="ms-2 me-auto">
-                      <div class="fw-bold">Socorro Independent School District</div>
+                      <div class="fw-bold">Socorros Independent School District</div>
                       Instructor <br>
                       <small> July 2020 - March 2022</small>
                     </div>
