--- a/static/styles.css
+++ b/static/styles.css
@@ -1,14 +1,28 @@
 *{
     margin:0;
     padding:0;
-    
+    font-family: 'Alice', serif;
 }
-
 body{
-    /* background-image: url('/static/visax-ra_EaaqxQVI-unsplash.jpg') ; */
-    /* background-color: black; */
+    background-image: url('/static/marc-zimmer-1dNujhlCTYQ-unsplash.jpg') ;
+    background-color: black; 
     background-position: center;
     background-size: cover;
+    padding-bottom: 50px;
+}
+#title-name{
+    color: #eff3f8;
+    font-family: 'Cinzel', serif;
+}
+#background-box{
+    width: 1500px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 220px;
+    opacity: .95;
+    border-radius:25px;
+    background-color:#eff3f8;
+    background-position: center;
 }
 #about_me{
     border-radius: 25px;
@@ -20,7 +34,89 @@ body{
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    padding-bottom: 100px;
+}
+.contact_me{
+    width: 600px;
+    margin: auto;
+    opacity: .95;
+    border-radius:25px;
+    background-color:#9bafeb;
+    padding-bottom: 75px;
+    padding-top: 150px;
+    background-position: center;
     
+}
+#scrollspyProjects{
+    padding-top: 75px;
+    padding-bottom: 100px;
+}
+#scrollspyContactMe{
+    padding-top: 125px;
     
-   
+}
+#h1aboutme{
+    font-family: 'Playfair Display', serif;
+}
+#h1projects{
+    padding-bottom: 70px;
+    font-family: 'Playfair Display', serif;
+}
+#h2contact{
+    padding-bottom: 20px;
+    font-family: 'Playfair Display', serif;
+}
+.project_circle{
+    width: 400px;
+    height: 400px;
+    border-radius: 200px;
+    background-color: #062c08;
+}
+.flip-card-container{
+    width: 400px;
+    height: 400px;
+    perspective: 1000px;
+    
+
+}
+.flip-card{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    
+}
+.flip-card-container:hover .flip-card{
+    transform: rotateY(-180deg);
+}
+.flip-card-front, .flip-card-back{
+    position: absolute;
+    width: 80%;
+    height: 80%;
+    backface-visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    border-radius: 160px;
+}
+.flip-card-front{
+    background-color: #062c08;
+    color: #fff;
+}
+.flip-card-back{
+    background-color: #0e0e0f;
+    color: #fff;
+    transform: rotateY(180deg);
+}
+.flip-card-back {
+    word-wrap: break-word;
+    color: #fff;
+    font-size: 100%;
+}
+#submit-button{
+    background-color: #062c08;
+    border-color: #073d0a;
 }
