--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,110 +4,90 @@
 
 <link rel="stylesheet" href="static/styles.css">
   <body>
-    <div class="container text-center" style="padding: 50px;">
-        <h1>About Me</h1>
+    <div id="background-box">
+    <div class="container text-center" style="padding: 50px;" id="scrollspyAboutMe">
+        <h1 id="h1aboutme">About Me</h1>
     </div>
-    <div class="container">
+    <div class="container ">
         <div class="row">
           <div class="col text-center">
-            <img style="height: 450px;" src="static/mc_pic.jpg" >
+            <img style="height: 450px;" src="static/marlynn cadena pic(1).png" >
           </div>
           <div class="col" style="height: 450px;">
            <p style="align-items: left;">Hello World! I am Marlynn Cadena a Full Stack Developer based in Texas. Previously, I have had roles as Microbiolgist working on different infectious disease research projects.
             From the lab setting, I transitioned into teaching at a high school that partnered with a local community college to increase secondary education access to promiently minority community. 
-            My passion and experiance in a STEM related field encouraged my curiousity and drove my desicion to transition into Software Engineering. </p>
+            My passion and experiance in a STEM related field encouraged my curiousity and drove my decision to transition into Software Engineering. </p>
           <p>I am excited to combine the skills I learned for my previous roles with Software Engineering. </p>
+
+            <div>
+             
+              <a href="https://www.linkedin.com/in/marlynn-cadena/" style="color:#212529;"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+              </svg></a>
+              <a href="https://www.linkedin.com/in/marlynn-cadena/" style="color:#212529; height: 50px; width: 25px;"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+              </svg></a>
+             <a href="static/Marlynn Cadena SWE Resume 2022.pdf" style="color:#212529;"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-file-text" viewBox="0 0 16 16">
+              <path d="M5 4a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm-.5 2.5A.5.5 0 0 1 5 6h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zM5 8a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm0 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1H5z"/>
+              <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+            </svg></a>
+            </div>
+          
           </div>
+          
         </div>
 
-        <div class="container text-center" style="padding: 50px;">
-          <h2><a href="static/Marlynn Cadena SWE Resume 2022.pdf" style="color:#212529;">Resume</a></h2>
-        </div>
-        <div class="container text-center" style="padding: 50px;" >
+       
+
+        
+
+
+           <div class="container text-center" id="scrollspyProjects">
+            <h1 style="color:#212529;" id="h1projects">Projects</h1>
+
             <div class="row">
-              <div class="col">
-                <ol class="list-group list-group-numbered">
-                  <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                      <div class="fw-bold">The University of Texas at El Paso</div>
-                      BS, Microbiology
-                    </div>
-                    
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                      <div class="fw-bold">The University of Texas at El Paso</div>
-                      MS, Biological Sciences
-                    </div>
-                   
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                      <div class="fw-bold">Hackbight Academy</div>
-                      Full Stack Wed Development 
-                    </div>
-                   
-                  </li>
-                </ol>
-              </div>
-              <div class="col" >
-                <ol class="list-group list-group-numbered">
-                  <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                      <div class="fw-bold">Socorro Independent School District</div>
-                      Instructor <br>
-                      <small> July 2020 - March 2022</small>
-                    </div>
-                    
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                      <div class="fw-bold">The University of Texas at El Paso</div>
-                      Research Assistant <br>
-                      <small> August 2020 - December 2020</small>
-                    </div>
-                    
-                  </li>
-                  <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
-                      <div class="fw-bold">The University of Texas at El Paso</div>
-                      Teaching Assistant<br>
-                      <small> January 2019 - August 2020</small>
-                    </div>
-                    
-                  </li>
-                </ol>
-              </div>
-            </div>
-
-           <div>
-            <div class="card mb-3" style="max-width: 540px;">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img src="static/rooting_for_you .png" class="img-fluid rounded" alt="...">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">Rooting for You</h5>
-                    <p class="card-text">A garden planning web application that allows users to create a profile with password
-                      encryption using Argon2. The implementation of Flask allows users to submit an HTML form with their plant
-                      selections and view in-depth gardening tips for each plant. Plant information was fetched from the Harvest
-                      Helper API used to seed an SQLAchemy database. Additionally, USDA Plant Hardiness Zone API was used in
-                      conjunction with backend crud functions, providing users with Plant Hardiness Zone, and last frost date range
-                      according to their location. Lastly, the SQL plant database was populated with a list of optimal companion
-                      plants. Rooting for You allows gardeners access to important gardening information in one organized location.</p>
-                    <p class="card-text"><small class="text-muted"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+            <div class="flip-card-container">
+              <div class="flip-card">
+                <div class="flip-card-front">Rooting for You</div>
+                <div class="flip-card-back"> <div><p>Rooting for You is a garden planning web application that allows users to plan their garden  space, provides detailed information for each garden plant,
+                  location specific information about when and how to plant their garden. </p></div>
+                 
+                    <div><a href="https://github.com/mcadena05/Rooting_For_You" style="color:#dee5ec;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                       <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                    </svg><a href="https://github.com/mcadena05/Rooting_For_You" style="color:#212529;">Github Repository</a></small></p>
+                    </svg></a></div>
                   </div>
-                </div>
               </div>
             </div>
-           </div>
+            <div class="flip-card-container">
+              <div class="flip-card">
+                <div class="flip-card-front">Guardian Pest <br> Management</div>
+                <div class="flip-card-back"> <div><p>Rooting for You is a garden planning web application that allows users to plan their garden  space, provides detailed information for each garden plant,
+                  location specific information about when and how to plant their garden. </p></div>
+                 
+                    <div><a href="https://github.com/mcadena05/Guardian_Pest_Managment" style="color:#dee5ec;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                    </svg></a></div>
+                  </div>
+              </div>
+            </div>
 
+            <div class="flip-card-container">
+              <div class="flip-card">
+                <div class="flip-card-front">Mensi</div>
+                <div class="flip-card-back"> <div><p>Mensi is a menstral cycle tracking android app that allows users to track their month menstral cycles and fertile windows.  </p></div>
+                 
+                    <div><a href="https://github.com/mcadena05/Rooting_For_You" style="color:#dee5ec;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                    </svg></a></div>
+                  </div>
+              </div>
+            </div>
+    
+          </div>
            <div>
-            <div >
+            <div class="container text-center" id="scrollspyContactMe">
               <form class="row g-3 needs-validation" novalidate>
+                <h1 style="color:#212529;" id="h2contact">Contact Me</h1>
                   <div class="col-md-4 position-relative">
                     <label for="validationTooltip01" class="form-label">First name</label>
                     <input type="text" class="form-control" id="validationTooltip01"  required>
@@ -136,16 +116,19 @@
                   </div>
                   <div class="mb-3">
                       <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                      
+                     
                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                   <div class="col-12">
-                    <button class="btn btn-primary " type="submit">Submit</button>
+                    <button id="submit-button" class="btn btn-primary " type="submit">Submit</button>
                   </div>
                 </form>
               </div>
               
+              
            </div>
+
+          </div>
   <body>
 
 {% endblock %}
