--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container text-center">
+    <div id="title-name" class="container text-center">
     <h1>Marlynn Cadena</h1>
     <h4>Software Engineer</h4>
     </div>
@@ -20,17 +20,17 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Home</a>
+      <a class="navbar-brand" href="#scrollspyAboutMe">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/projects">Projects</a>
+            <a class="nav-link active" aria-current="page" href="#scrollspyProjects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact">Contact Me</a>
+            <a class="nav-link" href="#scrollspyContactMe">Contact Me</a>
           </li>    
         </ul>
       </div>
