--- a/static/styles.css
+++ b/static/styles.css
@@ -1,122 +1,147 @@
 *{
     margin:0;
     padding:0;
-    font-family: 'Alice', serif;
+    
 }
 body{
-    background-image: url('/static/marc-zimmer-1dNujhlCTYQ-unsplash.jpg') ;
-    background-color: black; 
-    background-position: center;
-    background-size: cover;
-    padding-bottom: 50px;
-}
-#title-name{
-    color: #eff3f8;
-    font-family: 'Cinzel', serif;
-}
-#background-box{
-    width: 1500px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-left: 220px;
-    opacity: .95;
-    border-radius:25px;
-    background-color:#eff3f8;
-    background-position: center;
-}
-#about_me{
-    border-radius: 25px;
-    width: 1000px;
-    height: 700px;
-    background: #73AD21;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    padding-bottom: 100px;
-}
-.contact_me{
-    width: 600px;
-    margin: auto;
-    opacity: .95;
-    border-radius:25px;
-    background-color:#9bafeb;
-    padding-bottom: 75px;
-    padding-top: 150px;
-    background-position: center;
-    
+     /* background: #333D29;
+     background:linear-gradient(
+        to right,
+        #F9F6F1,
+        beige,
+        #C2C5AA
+     ) */
+
 }
 #scrollspyProjects{
     padding-top: 75px;
     padding-bottom: 100px;
-}
-#scrollspyContactMe{
-    padding-top: 125px;
     
 }
-#h1aboutme{
-    font-family: 'Playfair Display', serif;
+#scrollspyContactMe{
+    padding: 50px; 
+    background-color: #333D29;
+    opacity: .75;  
+    color: white;
+    margin-bottom: 50px;
+    border-radius:25px;
+    box-shadow: 3px 3px black;
+
 }
 #h1projects{
-    padding-bottom: 70px;
-    font-family: 'Playfair Display', serif;
+    padding-bottom: 60px;
+    text-align: center;
+    font-size: 3.7rem;
 }
 #h2contact{
     padding-bottom: 20px;
-    font-family: 'Playfair Display', serif;
-}
-.project_circle{
-    width: 400px;
-    height: 400px;
-    border-radius: 200px;
-    background-color: #062c08;
+    font-size: 3.7rem;
+    color: white;
 }
 .flip-card-container{
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
     perspective: 1000px;
-    
-
-}
+ }
 .flip-card{
     position: relative;
     width: 100%;
     height: 100%;
     border-radius: 100%;
     transition: transform 1s;
-    transform-style: preserve-3d;
-    
+    transform-style: preserve-3d; 
 }
 .flip-card-container:hover .flip-card{
     transform: rotateY(-180deg);
 }
 .flip-card-front, .flip-card-back{
     position: absolute;
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     backface-visibility: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 2rem;
-    border-radius: 160px;
+    border-radius: 200px;
+    box-shadow: 4px 4px lightgray;
 }
 .flip-card-front{
-    background-color: #062c08;
-    color: #fff;
+    background-color:black;
+    color: whitesmoke;
 }
 .flip-card-back{
-    background-color: #0e0e0f;
-    color: #fff;
+    background-color: lightgray;
+    color: black;
     transform: rotateY(180deg);
-}
-.flip-card-back {
     word-wrap: break-word;
-    color: #fff;
     font-size: 100%;
+    padding: 15%;
 }
 #submit-button{
-    background-color: #062c08;
-    border-color: #073d0a;
+    background-color: black;
+    border-color: black;
+}
+#about-me {
+    display: flex;
+    justify-content: left;
+    margin-top: -3em;
+    background-color: beige;
+    opacity: .97;
+    border-radius:25px;
+    box-shadow: 3px 3px black;
+    color: black;
+    height: 500px;
+}
+#about-me-inner {
+    padding: 5%;
+    animation: Slide_Left 1.4s ease;
+}
+#about-me-inner > h1{
+    font-size: 4rem;
+    color: black;
+}
+#about-me-inner > a{
+    color: black; 
+}
+@keyframes Slide_Left {
+    0%{
+        transform:translate(250px)
+    }
+    100%{
+        transform: translate(0);
+    }
+    
+}
+.box {
+    width: 500px;
+    height: 400px;
+    background: black;
+    position: relative;
+    top: 40px;
+    left: -35px;
+}
+.shape {
+    width: 600px;
+    height: 600px;
+    background: #656D4A;
+    border-radius: 50%;
+    position: absolute;
+    left: 50px;
+    top: 50px;
+    overflow: hidden;
+}
+#top-left {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 1px;
+    left:2px;
+    border-top-left-radius: 300px;
+    position: relative;
+    left: -300px;
+}
+#contact-me{
+    padding: 10%;
+    z-index: auto;
 }
