--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,27 +1,56 @@
-<!doctype html>
-{% include 'index.html' %}
-{% block body %}
-
-<link rel="stylesheet" href="static/styles.css">
-  <body>
-    <div id="background-box">
-    <div class="container text-center" style="padding: 50px;" id="scrollspyAboutMe">
-        <h1 id="h1aboutme">About Me</h1>
-    </div>
-    <div class="container ">
-        <div class="row">
-          <div class="col text-center">
-            <img style="height: 450px;" src="static/marlynn cadena pic(1).png" >
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marlynn Cadena SWE Portfilio</title>
+    <!-- styles sheet link -->
+    <link rel="stylesheet" href="static/styles.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#scrollspyAboutMe">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#scrollspyProjects">Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#scrollspyContactMe">Contact Me</a>
+              </li>    
+            </ul>
           </div>
-          <div class="col" style="height: 450px;">
-           <p style="align-items: left;">Hello World! I am Marlynn Cadena a Full Stack Developer based in Texas. Previously, I have had roles as Microbiolgist working on different infectious disease research projects.
-            From the lab setting, I transitioned into teaching at a high school that partnered with a local community college to increase secondary education access to promiently minority community. 
-            My passion and experiance in a STEM related field encouraged my curiousity and drove my decision to transition into Software Engineering. </p>
-          <p>I am excited to combine the skills I learned for my previous roles with Software Engineering. </p>
+        </div>
+    </nav>
 
-            <div>
-             
-              <a href="https://www.linkedin.com/in/marlynn-cadena/" style="color:#212529;"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+    <div class="container-fluid">
+      <div class="box">
+        <div class="shape">
+            <div id="top-left"></div>
+        </div>
+      </div>
+
+    </div>
+      
+    <div class="container" id="about-me">
+        <div class="inner" id="about-me-inner">
+            <h1>Marlynn Cadena</h1>
+            <h2>Software Engineer</h2>
+            <p>Hello World! I am Marlynn Cadena a Full Stack Developer based in Texas. Previously, I have had roles as Microbiolgist working on different infectious disease research projects.
+                From the lab setting, I transitioned into teaching at a high school that partnered with a local community college to increase secondary education access to a promiently minority community. 
+                My passion and experiance in a STEM related field encouraged my curiousity and drove my decision to transition into Software Engineering.
+            </p>
+            <p>I am excited to combine the skills I learned for my previous roles with Software Engineering. </p>
+            <a href="https://www.linkedin.com/in/marlynn-cadena/" style="color:#212529;"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                 <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
               </svg></a>
               <a href="https://www.linkedin.com/in/marlynn-cadena/" style="color:#212529; height: 50px; width: 25px;"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
@@ -31,104 +60,100 @@
               <path d="M5 4a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm-.5 2.5A.5.5 0 0 1 5 6h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zM5 8a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm0 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1H5z"/>
               <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
             </svg></a>
-            </div>
-          
-          </div>
-          
+
         </div>
-
-       
-
-        
-
-
-           <div class="container text-center" id="scrollspyProjects">
-            <h1 style="color:#212529;" id="h1projects">Projects</h1>
-
-            <div class="row">
-            <div class="flip-card-container">
-              <div class="flip-card">
-                <div class="flip-card-front">Rooting for You</div>
-                <div class="flip-card-back"> <div><p>Rooting for You is a garden planning web application that allows users to plan their garden  space, provides detailed information for each garden plant,
-                  location specific information about when and how to plant their garden. </p></div>
-                 
-                    <div><a href="https://github.com/mcadena05/Rooting_For_You" style="color:#dee5ec;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                    </svg></a></div>
-                  </div>
-              </div>
-            </div>
-            <div class="flip-card-container">
-              <div class="flip-card">
-                <div class="flip-card-front">Guardian Pest <br> Management</div>
-                <div class="flip-card-back"> <div><p>Rooting for You is a garden planning web application that allows users to plan their garden  space, provides detailed information for each garden plant,
-                  location specific information about when and how to plant their garden. </p></div>
-                 
-                    <div><a href="https://github.com/mcadena05/Guardian_Pest_Managment" style="color:#dee5ec;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                    </svg></a></div>
-                  </div>
-              </div>
-            </div>
-
-            <div class="flip-card-container">
-              <div class="flip-card">
-                <div class="flip-card-front">Mensi</div>
-                <div class="flip-card-back"> <div><p>Mensi is a menstral cycle tracking android app that allows users to track their month menstral cycles and fertile windows.  </p></div>
-                 
-                    <div><a href="https://github.com/mcadena05/Rooting_For_You" style="color:#dee5ec;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                    </svg></a></div>
-                  </div>
-              </div>
-            </div>
-    
-          </div>
-           <div>
-            <div class="container text-center" id="scrollspyContactMe">
-              <form class="row g-3 needs-validation" novalidate>
-                <h1 style="color:#212529;" id="h2contact">Contact Me</h1>
-                  <div class="col-md-4 position-relative">
-                    <label for="validationTooltip01" class="form-label">First name</label>
-                    <input type="text" class="form-control" id="validationTooltip01"  required>
-                    <div class="valid-tooltip">
-                      Looks good!
+    </div>
+      <br>
+      <br> <br> <br>
+      
+        <div class="container-fluid" > 
+          <h1 id="h1projects">PROJECTS</h1>
+          <div class="row">
+            <div class="col">
+              <div class="flip-card-container">
+                  <div class="flip-card">
+                    <div class="flip-card-front">Rooting for You</div>
+                    <div class="flip-card-back"> <p>Rooting for You is a garden planning web application <br> allows users to plan their garden  space, provides detailed information for each garden plant,
+                      location specific information about when and how to plant their garden. </p>
+                        <br>
+                      <a href="https://github.com/mcadena05/Rooting_For_You" style="color:black;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                          <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                        </svg></a>
                     </div>
                   </div>
-                  <div class="col-md-4 position-relative">
-                    <label for="validationTooltip02" class="form-label">Last name</label>
-                    <input type="text" class="form-control" id="validationTooltip02" required>
-                    <div class="valid-tooltip">
-                      Looks good!
-                    </div>
-                  </div>
-                  <div class="col-md-4 position-relative">
-                    <label for="validationTooltipUsername" class="form-label">Email</label>
-                    <div class="input-group has-validation">
-                      <span class="input-group-text" id="validationTooltipUsernamePrepend"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-                          <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-                        </svg></span>
-                      <input type="text" class="form-control" id="validationTooltipUsername" aria-describedby="validationTooltipUsernamePrepend" required>
-                      <div class="invalid-tooltip">
-                        Please choose a unique and valid email address.
+                </div>
+              </div>
+              <div class="col">
+                <div class="flip-card-container">
+                  <div class="flip-card">
+                    <div class="flip-card-front">Guardian Pest <br> Management</div>
+                    <div class="flip-card-back"> <div><p>Partnered with Guardian Pest Management to improve customer experience by creating a full stack Flask web application that provides customers with
+                        information such as types of services, reviews and request a quote.</p></div>
+                    
+                        <div><a href="https://github.com/mcadena05/Guardian_Pest_Managment" style="color:black;"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                          <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                        </svg></a></div>
                       </div>
-                    </div>
                   </div>
-                  <div class="mb-3">
-                      <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                     
-                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                  <div class="col-12">
-                    <button id="submit-button" class="btn btn-primary " type="submit">Submit</button>
-                  </div>
-                </form>
+                </div>
               </div>
-              
-              
-           </div>
-
           </div>
-  <body>
+        </div>
+        
+           
+   
+    
+            
+    
+    
+          
+            <div class="container-fluid" id="contact-me">
+                <div class="container text-center" id="scrollspyContactMe">
+                  <form action="contact" method="post" class="row g-3 needs-validation" novalidate>
+                    <h1 id="h2contact">Contact Me</h1>
+                      <div class="col-md-4 position-relative">
+                        <label for="validationTooltip01" class="form-label">First name</label>
+                        <input type="text" class="form-control" id="validationTooltip01"  required>
+                        <div class="valid-tooltip">
+                          Looks good!
+                        </div>
+                      </div>
+                      <div class="col-md-4 position-relative">
+                        <label for="validationTooltip02" class="form-label">Last name</label>
+                        <input type="text" class="form-control" id="validationTooltip02" required>
+                        <div class="valid-tooltip">
+                          Looks good!
+                        </div>
+                      </div>
+                      <div class="col-md-4 position-relative">
+                        <label for="validationTooltipUsername" class="form-label">Email</label>
+                        <div class="input-group has-validation">
+                          <span class="input-group-text" id="validationTooltipUsernamePrepend"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                              <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                            </svg></span>
+                          <input type="text" class="form-control" id="validationTooltipUsername" aria-describedby="validationTooltipUsernamePrepend" required>
+                          <div class="invalid-tooltip">
+                            Please choose a unique and valid email address.
+                          </div>
+                        </div>
+                      </div>
+                      <div class="mb-3">
+                          <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                         
+                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                      <div class="col-12">
+                        <button id="submit-button" class="btn btn-primary " type="submit">Submit</button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              
+                  
+              
+    
+           
+    
 
-{% endblock %}
+</body>
+</html>
